# duck-in-pool

./: '  CMakeLists.txt  README.md
assets/: source.txt
docs/: buglist.txt
src/kaczka/: helpers.cpp  helpers.hpp  main.cpp  mesh.cpp  mesh.hpp  shaders.cpp  shaders.hpp  splines.cpp  splines.hpp  waterSurface.cpp  waterSurface.hpp
src/shaders/: cubeLighting.frag  cubeLighting.vert  cubemap.frag  cubemap.vert  duck.frag  duck.vert  triangle.frag  triangle.vert  water.frag  water.vert
